test/expected/declare_yo_exclam_k_b.out
declare ! as final operator (S) returning bool
                             ^
30: error: member operator "!" must have exactly 0 parameters
